--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,8 @@
-FROM tutum/nginx
-RUN rm /etc/nginx/sites-enabled/default
-ADD sites-enabled/ /etc/nginx/sites-enabled
+FROM nginx:latest
+
+# Remove default nginx config
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy our custom nginx configuration
+COPY sites-enabled/default.conf /etc/nginx/conf.d/default.conf
+
