--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,28 @@
-version: '3.7'
+services:
+  db:
+    image: postgres:15
+    container_name: jenkins_postgres_db
+    environment:
+      POSTGRES_DB: flaskdb
+      POSTGRES_USER_FILE: /run/secrets/postgres_user
+      POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
+    secrets:
+      - postgres_user
+      - postgres_password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  web:
+    image: python:3.10-slim
+    container_name: jenkins_flask_web
+    working_dir: /app
+    volumes:
+      - ./web:/app
+    command: bash -c "pip install -r requirements.txt && python app.py"
+    ports:
+      - "8081:5000"
+    depends_on:
+      - db
 
 secrets:
   postgres_user:
@@ -6,53 +30,6 @@ secrets:
   postgres_password:
     file: ./secrets/postgres_password.txt
 
-services:
-  nginx:
-    restart: always
-    build: ./nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./web/static:/static
-    links:
-      - web:web
-
-  web:
-    restart: always
-    build: ./web
-    links:
-      - postgres:postgres
-    secrets:
-      - postgres_user
-      - postgres_password
-    environment:
-      DEBUG: False
-      POSTGRES_DB: db
-      DATABASE_PORT: 5432
-      POSTGRES_USER_FILE: /run/secrets/postgres_user
-      POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
-    expose:
-      - "8000"
-    depends_on:
-      - postgres
-    command: >
-      sh -c "python3 ./create_db.py &&
-             gunicorn -w 2 -b :8000 app:app"
-
-  postgres:
-    restart: always
-    image: postgres:latest
-    volumes:
-      - db-data:/var/lib/postgresql
-    secrets:
-      - postgres_user
-      - postgres_password
-    environment:
-      POSTGRES_DB: db
-      POSTGRES_USER_FILE: /run/secrets/postgres_user
-      POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
-    expose:
-      - "5432"
-
 volumes:
-  db-data:
+  postgres_data:
+
